--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Backend server for Expense Tracker",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "npx prisma migrate deploy && node src/server.js",
     "dev": "nodemon src/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
